# pixzclaw-pi

./: .gitignore  AGENT_PROMPT.md  HANDOFF.md  ONBOARDING.md  PI_INSTALL.md  README.md  VIDEO-SCRIPT.md  api-payload.json
ci/: build-pi.yml
crates/solana-wasm-core/: Cargo.toml  README.md
crates/solana-wasm-core/src/: amount.rs  dashboard.rs  invoice.rs  lib.rs  pix.rs  rpc.rs  shape.rs  solana_pay.rs  status.rs
dist-local/plugins/brl-usdc-invoice/: README.md  config.example.toml  manifest.toml
dist-local/plugins/invoice-status/: README.md  manifest.toml
docs/: index.html  script.js  style.css
plugins/brl-usdc-invoice/: Cargo.toml  README.md  manifest.toml
plugins/brl-usdc-invoice/src/: invoice_tool.rs  lib.rs
plugins/brl-usdc-invoice/tests/: invoice_tool.rs
plugins/invoice-status/: Cargo.toml  LICENSE  README.md  config.example.toml  manifest.toml
plugins/invoice-status/src/: lib.rs  status_tool.rs
plugins/invoice-status/tests/: status_tool.rs
plugins/pixzclaw-brief/: Cargo.toml  LICENSE  README.md  config.example.toml  manifest.toml
plugins/pixzclaw-brief/src/: brief_tool.rs  lib.rs
plugins/pixzclaw-brief/tests/: brief_tool.rs
scripts/: force-reinstall-plugins.sh  install-soul-on-pi.sh  vendor-core.sh
skills/: README.md  SOUL.md
skills/pixzclaw-daily/: SKILL.md
skills/pixzclaw-onboard/: SKILL.md
skills/pixzclaw-watch/: SKILL.md
