[package]
name = "solana-wasm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM-friendly Solana/PIX helpers for ZeroClaw plugins"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
sha2 = "0.10"

[dev-dependencies]

[workspace]
