# Standalone crate (own [workspace]): built for wasm32-wasip2 as a tool
# plugin component; the pure `status_tool` core (rlib) is host-tested with plain
# `cargo test`. `waki` (the blocking wasi:http client) is a wasm-only dep so the
# host test build never tries to compile it.
[package]
name = "invoice-status"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw WIT tool plugin: check dual-rail invoice USDC settlement by Solana Pay reference (T0 read-only)."
publish = false

# cdylib for the wasm component; rlib so the pure status core is testable
# on the host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-wasm-core = { path = "vendor/solana-wasm-core" }

# wasi:http client — only compiled for the wasm component, never on the host.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
