[package]
name = "pixzclaw-brief"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PixZClaw dashboard: treasury + receivables brief for Telegram (T0 read-only)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-wasm-core = { path = "vendor/solana-wasm-core" }

[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
